--- a/my_website.css
+++ b/my_website.css
@@ -4,24 +4,36 @@ header{
 	background-size: cover;
 	height: 260px;
 	color: white;
-	font-family: "Amatic SC"; 
+	font-family: "Shadows Into Light Two";
+	padding-bottom: 0px;
 }
+
 #main_title {
 	font-size: 80px;
-	padding-top: 1cm;
+	padding-top: 2cm;
 }
 a{
-	color:white;
+	color:black
 }
 
 ul#menu_whole {
-background-color: #000000;
-padding-bottom: 0px
+	font-family: "Poiret One";
+	background-color: white;
+	padding-bottom: 10px;
+	text-align: center;
+	border-bottom-style: groove;
+	padding-top: 0px;
 
 }
 
 .menu_item {
 	display:inline;
-	padding: 0px 30px 0px 30px;
+	padding: 0px 30px 00px 30px;
 	font-size: 35px;
 }
+
+body { 
+font-family: "Amatic SC"
+padding-top: 10px;
+;
+ }
