--- a/my_website.css
+++ b/my_website.css
@@ -1,10 +1,17 @@
-header{
+header {
 	text-align: center;
-	background: url("van5.jpeg");
 	background-size: cover;
 	height: 260px;
+	width: 100%;
 	color: white;
 	font-family: "Waiting for the Sunrise";
+	padding-bottom: 0px;
+}
+
+#van_header {
+	background-size: contain;
+	height: auto;
+	width: 100%;
 	padding-bottom: 0px;
 }
 
