--- a/my_website.css
+++ b/my_website.css
@@ -65,8 +65,12 @@ body {
     border-radius:0;
 }
 
+.row {
+	 overflow-x: hidden;
+}
+
 .col-xs-12.col-sm-6.col-md-4{
-	padding-right: 10px;
+	padding-right: 0px;
 	padding-left:  0px;
 
 }
