--- a/my_website.css
+++ b/my_website.css
@@ -85,10 +85,20 @@ body {
 	 margin: 0px;
 }
 
-.col-xs-12.col-sm-6.col-md-4 {
+.row div {
 	padding: 5px;
 }
 
-.col-xs-12.col-sm-12.col-md-4{
-	padding: 5px;
-}
+
+
+@media screen and (max-width: 352px) {
+
+   #main_title { 
+   	  font-size: 50px;
+   	  padding-top: 70px; 
+   	}
+
+   #sub_heading { 
+   	  font-size: 30px; 
+   	}
+ }
