--- a/my_website.css
+++ b/my_website.css
@@ -315,7 +315,17 @@ body {
 		padding-left: 3%;
 		padding-right: 3%;
 	}
+}
+@media only screen and (max-width: 500px){
+	html { 
+		background:url(Contact_background.jpg);
+  		background-size: cover;
+		background-repeat: no-repeat;
+		width: 100%;
+		height: 1500px;
+		background-position: 50% 50%;
 
+	}
 }
 
  /*Contact Page ---------------*/
@@ -326,7 +336,7 @@ html{    background:url(Contact_background.jpg);
   	background-size: cover;
 	background-repeat: no-repeat;
 	width: 100%;
-	height: 1300px;
+	height: 1200px;
 	background-position: 50% 50%;
 }
 
