--- a/my_website.css
+++ b/my_website.css
@@ -322,7 +322,7 @@ body {
   		background-size: cover;
 		background-repeat: no-repeat;
 		width: 100%;
-		height: 1800px;
+		height: auto;
 		background-position: 50% 50%;
 
 	}
